# minirouter

./: .gitignore  Makefile  build-bins.sh  builder.Dockerfile  config.template.json  gpio_buttons.c  images.py  main.py  pyproject.toml  ssd1306_i2c_server.c  web_output.py
bins/: Makefile  build-bins.sh  builder.Dockerfile  gpio_buttons_server.c  gpio_buttons_server.default  gpio_buttons_server.service  minirouter.service  ssd1306_i2c_server.default  ssd1306_i2c_server.service  wificonnect.c
bins/scripts/: install-deps.sh  minirouter  setup-services.sh
minirouter/: __init__.py  main.py  web_output.py
minirouter/data/: config.template.json
minirouter/ui/: main_ui.py  menu.py  status.py  ui.py
