[project]
name = "minirouter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.5",
    "sdbus-networkmanager>=2.0.0",
]
[tool.ruff]
line-length = 120
lint.unfixable = [
  "F401", # Don't touch unused imports
]
