[project]
name = "minirouter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "evdev>=1.9.2",
    "pillow>=12.1.0",
    "python-statemachine>=2.5.0",
    "requests>=2.32.5",
    "sdbus-networkmanager>=2.0.0",
    "sixel>=0.2.0",
]
[tool.ruff]
line-length = 120
lint.unfixable = [
  "F401", # Don't touch unused imports
]
